--- a/src/App.css
+++ b/src/App.css
@@ -1,86 +1,125 @@
 .h1 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.5em;
 }
 .p {
-    color: #787e88;
+  color: #787e88;
+  font-size: 13px;
+  margin-bottom: 1.5em;
+  max-width: 100%;
 }
 .container {
-    color: white;
-    background-color: #1b222c;
-    width: 20em;
-    height: 20em;
-    border-radius: 2em;
-    padding: 2em;
+  font-family: sans-serif;
+  color: white;
+  background-color: #1b222c;
+  width: 300px;
+  height: 300px;
+  border-radius: 2em;
+  border: 0;
+  outline: 0;
+  padding: 2em;
 }
 .circle-btn-wrapper {
-    margin-bottom: 1.5em;
-    display: flex;
-    align-items: center;
+  margin-bottom: 1.2em;
+  display: flex;
+  align-items: center;
 }
 .circle-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    padding: 10px;
-    width: 2em;
-    margin-left: 1em;
-    height: 2em;
-    background-color: #262f38;
-    cursor: pointer;
+  padding: 0;
+  border: none;
+  color: #707781;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 10px;
+  width: 3.5em;
+  margin-left: 1em;
+  margin-bottom: 0.5em;
+  height: 3.5em;
+  background-color: #272e38;
+  cursor: pointer;
 }
 .circle-btn:hover {
-    background-color: #7c8999;
+  background-color: #7c8999;
+  color: #fafeff;
+}
+.circle-btn.active {
+  background-color: #fc7614;
+  color: #fafeff;
 }
 #star {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
+  padding: 0;
+  border: none;
+  color: #707781;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 3.5em;
+  height: 3.5em;
+  background-color: #272e38;
 }
 .circle-btn:first-child {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .circle-btn.active {
-    background-color: #fc7614;
+  background-color: #fc7614;
 }
-.btn:active {
-    background-color: #ffffff;
-    color: #fc7614;
+.btn:focus {
+  background-color: #ffffff;
+  color: #fc7614;
 }
 .btn {
-    width: 100%;
-    background-color: #fc7614;
-    color: #ffffff;
-
-    padding: 1em;
-    border-radius: 2em;
-    cursor: pointer;
+  width: 100%;
+  background-color: #fc7614;
+  color: #ffffff;
+  border: none;
+  padding: 1em;
+  border-radius: 2em;
+  font-size: 12px;
+  line-height: 1.5em;
+  cursor: pointer;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .App {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    background-color: #000000;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: none;
+  width: 100vw;
+  height: 100vh;
+  background-color: #141518;
 }
 .thanksWrapper {
-    text-align: center;
+  text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
 }
-.star-selected {
-    display: inline-block;
-    margin: 0;
 
-    padding: 0.5em 1.5em;
-    border-radius: 2em;
-    color: #ca7b3e;
-    background-color: #2b3139;
+.star-selected {
+  font-size: 14px;
+  margin: 1.8em;
+  margin-left: 3.5em;
+  margin-right: 3.5em;
+  padding: 0.5em 1.5em;
+  border-radius: 2em;
+  color: #ca7b3e;
+  background-color: #2b3139;
 }
 .img-holder {
-    margin-top: 1em;
-    margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #141518;
 }
