--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,27 @@
 .h1 {
   font-weight: 500;
-  font-size: 24px;
+  font-size: 22px;
   line-height: 1.5em;
+  margin-top: 0.5em;
 }
 .p {
   color: #787e88;
   font-size: 13px;
+  line-height: 1.5em;
+
   margin-bottom: 1.5em;
   max-width: 100%;
 }
 .container {
   font-family: sans-serif;
   color: white;
-  background-color: #1b222c;
+  background-image: linear-gradient(to bottom, #1c2734, #151e29);
   width: 300px;
   height: 300px;
   border-radius: 2em;
   border: 0;
   outline: 0;
+  margin: 0;
   padding: 2em;
 }
 .circle-btn-wrapper {
@@ -26,49 +30,47 @@
   align-items: center;
 }
 .circle-btn {
-  padding: 0;
   border: none;
+  padding: 10px;
   color: #707781;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  padding: 10px;
-  width: 3.5em;
-  margin-left: 1em;
+  width: 3.4em;
+  margin-left: 1.4em;
   margin-bottom: 0.5em;
-  height: 3.5em;
-  background-color: #272e38;
+  height: 3.4em;
+  background-color: #242f39;
   cursor: pointer;
 }
 .circle-btn:hover {
-  background-color: #7c8999;
+  background-color: #fc7614;
+
   color: #fafeff;
 }
 .circle-btn.active {
-  background-color: #fc7614;
+  background-color: #7c8999;
+
   color: #fafeff;
 }
 #star {
-  margin-bottom: 2em;
   padding: 0;
+  margin-bottom: 1.6em;
   border: none;
   color: #707781;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  width: 3.5em;
-  height: 3.5em;
+  width: 3.2em;
+  height: 3.2em;
   background-color: #272e38;
 }
 .circle-btn:first-child {
   margin-left: 0;
 }
 
-.circle-btn.active {
-  background-color: #fc7614;
-}
 .btn:focus {
   background-color: #ffffff;
   color: #fc7614;
@@ -106,13 +108,12 @@
 
 .star-selected {
   font-size: 14px;
-  margin: 1.8em;
-  margin-left: 3.5em;
-  margin-right: 3.5em;
+  margin-left: 3.2em;
+  margin-right: 3.2em;
   padding: 0.5em 1.5em;
   border-radius: 2em;
   color: #ca7b3e;
-  background-color: #2b3139;
+  background-color: #222d37;
 }
 .img-holder {
   margin-bottom: 1em;
